# Morpion

./: CMakeLists.txt  main.cpp
include/: Game.h  Human.h  IA.h  Plate.h  Player.h
src/: Game.cpp  Human.cpp  IA.cpp  Plate.cpp  Player.cpp
